--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "value": "https://criptomilhas.com.br"
         },
         {
           "key": "Access-Control-Allow-Methods",
